# uniffi-generators

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  test_generators.sh
.github/workflows/: docker_release.yml  tests.yml
compatibility-test/: Cargo.toml  env.sh  setup_bindings.sh  setup_bindings_inner.sh  setup_test_source.sh  test_cpp.sh  test_cs.sh  test_go.sh  test_kotlin.sh  test_python.sh  test_swift.sh  uniffi.toml
compatibility-test/src/: lib.rs
compatibility-test/tests/cpp/: test_coverall.cpp
compatibility-test/tests/cs/: dotnet.csproj  test_coverall.cs
compatibility-test/tests/go/: coverall_test.go  go.mod
uniffi-bindgen/: Cargo.toml
