[package]
name = "compatibility-test"
version = "0.28.3"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "compatibility_test"

[dependencies]
uniffi-fixture-coverall = { git = "https://github.com/mozilla/uniffi-rs.git", tag = "v0.28.3" }
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }
